# nano-kernel-runtime

./: .gitignore  AI-README.md  AUDIT_GH.md  AUDIT_PMEM_RO.md  BUG_inotify_dev_mode.md  CLAUDE.md  Cargo.toml  MAINTENANCE.md  NKR_API.md  NKR_Backup_Panel_Integration.md  NKR_Backup_Plan.md  NKR_Snapshot_Restore.md  NKR_Snapshot_Restore_FASE0_REPORT.md  NKR_WhitePaper_EN.md  NKR_WhitePaper_ES.md  NKR_vs_Docker.md  Nkrfile.goinit  Nkrfile.nginx  Nkrfile.odoo  Nkrfile.odoo19  Nkrfile.pg  Nkrfile.pgbouncer  README.md  hello.c  init  init.go  nkr_sso.md  test-kernel.img
build-kernel/: Dockerfile  Makefile  build-nanolinux.sh  switch-kernel.sh
crates/nkr-watcher/: Cargo.toml
crates/nkr-watcher/src/: main.rs
deploy/: cell-compose.yml  cell-setup.sh  clients.yml  cron-nkr-backup-cleanup  migrate-cell-rootfs.sh  mt-common.sh  mt-compose-gen.sh  mt-provision.sh  nkr-backup-cleanup.sh  nkr-backup-ls.sh  nkr-backup-rm.sh  nkr-backup.sh  nkr-restore-nkr.sh  setup.sh  start.sh  stop.sh  update.sh
deploy/config/: odoo.conf
deploy/fail2ban/filter.d/: nkr-nginx.conf
deploy/fail2ban/jail.d/: nkr-nginx.conf
deploy/nginx/snippets/: nkr-hardening.conf  nkr-real-ip.conf
deploy/systemd/: README.md  nkr-api-server.service  nkr.service
src/: api.rs  api_http.rs  balloon.rs  block.rs  build.rs  cell.rs  cli.rs  compose.rs  compose.rs.orig  compose.rs.patch  compose.rs.rej  console.rs  fsutil.rs  initramfs.rs  inst_lock.rs  ipc.rs  ipc_server.rs  janitor.rs  main.rs  metrics.rs  net.rs  netlock.rs  pmem.rs  pull.rs  registry.rs  seccomp.rs  state.rs  virtio_fs.rs  vmm.rs  watchdog.rs
tools/: setup-net.sh  test-api.sh
tools/initramfs/: init
tools/initramfs/lib/modules/6.6.117-0-virt/: crc16.ko  crc32c-intel.ko  crc32c_generic.ko  ext4.ko  failover.ko  jbd2.ko  libcrc32c.ko  mbcache.ko  net_failover.ko  virtio_blk.ko  virtio_net.ko
tools/test-kernel/: Makefile  linker.ld  start.S
